# cvm_compiler_v2

./: Cargo.toml  README.md  a.out  code chunks.cbm  code chunks1.cbm  config.yml  cvm.cvm  decompiled.cvm  execute.bat  game.cvm  new.cbm  new.cbmexe  new.decomp.cbm  new.llasm.cbm  new.mlasm.cbm  new.optimized.mlasm.cbm  new1.cbm  struct.optimized.mlasm.cbm  test.cvm  tests.cvm
cvm/doc/: style.css  type_Boolean.html  type_Byte.html  type_Bytes.html  type_Char.html  type_Empty.html  type_String.html  type_Table.html  type_global.html  type_u32.html
cvm/lib/: asm_def.cvm  std.cvm  turtle.cvm
cvm/lib/types/: boolean.cvm  byte.cvm  bytes.cvm  char.cvm  (+3 more)
cvm/src/: cvm.cvm  game.cvm  simple.cvm  sponge.cvm
doc/: index.html  index.ts  style.sass
lib/: asm_def.cvm
lib/types/: boolean.cvm  byte.cvm  bytes.cvm  char.cvm  empty.cvm  index.cvm  string.cvm  u32.cvm
pest/src/: span.rs
src/: asm.rs  cvm gramar.pest  error.rs  function.rs  instructions.rs  main.rs  types.rs  utils.rs  variable.rs
src/cli/: config.rs
src/cvm_exe/: executor.rs  mod.rs
src/cvmir/: clear_unreachable.rs  computer.rs  fn_inliner.rs  if_cleaner.rs  loop_break_inline.rs  loop_flattener.rs  loop_fn_return_opt.rs  loop_for_unwrapper.rs  mod.rs  regroup_consts.rs  remap_consts.rs
src/docs/: generator.rs  index.js  mod.rs  type_template.html
src/exporter/: c.rs  c_std.c  java.rs  java_std.java  js.rs  js_std.js  mod.rs  ocaml.rs  ocaml_std.ml  python.rs  python_std.py  rust.rs
src/expression/: compiler.rs  expression.rs  mod.rs
src/instruction/: compiler.rs  instruction.rs  mod.rs
(+2 files in other folders)
