[package]
name = "cvm_compiler_v2"
version = "0.1.0"
authors = ["ccgauche <gaucheron.laurent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = { path = "pest" }
pest_derive = "2.1.0"
path-absolutize = "3.0.7"
serde = {features = ["derive"], version = "1.0.124"}